--- a/css/style.css
+++ b/css/style.css
@@ -2,12 +2,34 @@ body {
     background-color: #083b4c;
 }
 
-.square {
-    /* display: flex;
-    justify-content: center;
-     */
+#griglia {
+    display: flex;
+    flex-flow: row wrap;
 
-    /* background-color: #1389b2;
-    width: 50px;
-    height: 50px; */
+    margin: auto;
+
+    gap: 15px;
+}
+
+#griglia .square {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    width: 70px;
+    height: 70px;
+
+    background-color: #1389b2;
+}
+
+#griglia .square.fizzbuzz {
+    background-color: #f0466f;
+}
+
+#griglia .square.fizz {
+    background-color: #0cd6a1;
+}
+
+#griglia .square.buzz {
+    background-color: #ffd166;
 }
